# fastpyxl

./: .coverage  .coveragerc  .gitignore  .hgignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.txt  LICENCE.rst  README.rst  conftest.py  great-docs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
artifacts/: construct_profile_legacy.txt  construct_profile_legacy_cumtime.txt  construct_profile_legacy_tottime.txt  construct_profile_typed.txt  construct_profile_typed_cumtime.txt  construct_profile_typed_tottime.txt  phase0_baseline_benchmarks.json  phase0_baseline_benchmarks.md  phase0_field_mapping.md  phase0_hard_case_modules.md  phase1_synthetic_benchmarks.json  phase1_synthetic_benchmarks.md  phase2_translation_guide.md  phase8_synthetic_benchmarks.json  phase8_synthetic_benchmarks.md  plan.md
devtools/: __init__.py  benchmark.py  paths.py  profile.py  serialisable_inventory.py  synthetic_serialisable.py
doc/: Makefile  changes.rst  comments.rst  conf.py  development.rst  example.py  filters.py  formatting.rst  formula.rst  index.rst  make.bat  pandas.rst  performance.rst  read_performance.txt  table.py  tutorial.rst  worksheet_properties.rst  write_performance.txt
doc/api/: fastpyxl.cell.cell.rst  fastpyxl.cell.read_only.rst  fastpyxl.cell.rst  fastpyxl.cell.tests.rst  fastpyxl.cell.tests.test_cell.rst  fastpyxl.cell.tests.test_read_only.rst  fastpyxl.cell.tests.test_writer.rst  fastpyxl.chart.area_chart.rst  fastpyxl.chart.axis.rst  fastpyxl.chart.bubble_chart.rst  fastpyxl.chart.chartspace.rst  fastpyxl.chart.data_source.rst  fastpyxl.chart.descriptors.rst  fastpyxl.chart.label.rst  fastpyxl.chart.layout.rst  fastpyxl.chart.legend.rst  fastpyxl.chart.line_chart.rst  fastpyxl.chart.picture.rst  fastpyxl.chart.pie_chart.rst  fastpyxl.chart.pivot.rst  fastpyxl.chart.plotarea.rst  fastpyxl.chart.radar_chart.rst  fastpyxl.chart.reader.rst  fastpyxl.chart.reference.rst  fastpyxl.chart.scatter_chart.rst  fastpyxl.chart.series.rst  fastpyxl.chart.series_factory.rst  fastpyxl.chart.shapes.rst  fastpyxl.chart.stock_chart.rst  fastpyxl.chart.surface_chart.rst  fastpyxl.chart.tests.conftest.rst  fastpyxl.chart.tests.test_axis.rst  fastpyxl.chart.tests.test_bar_chart.rst  fastpyxl.chart.tests.test_data_source.rst  fastpyxl.chart.tests.test_error_bar.rst  fastpyxl.chart.tests.test_line_chart.rst  fastpyxl.chart.tests.test_reference.rst  fastpyxl.chart.tests.test_series.rst  fastpyxl.chart.tests.test_shapes.rst  fastpyxl.chart.tests.test_stock_chart.rst  (+161 more)
doc/charts/: area.py  area3d.py  bar.py  bar3d.py  bubble.py  chart_layout.py  chartsheet.py  chartsheet.rst  doughnut.py  gauge.py  limits_and_scaling_log.py  limits_and_scaling_minmax.py  limits_and_scaling_orientation.py  line.py  line3D.py  pattern.py  pie-gradient.py  pie.py  pie3D.py  radar.py  scatter.py  secondary.py  stock.py  surface.py
fastpyxl/: __init__.py  _constants.py
fastpyxl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fastpyxl/cell/: __init__.py  _writer.py  cell.py  read_only.py  rich_text.py  text.py
fastpyxl/chart/: _3d.py  __init__.py  _chart.py  area_chart.py  axis.py  bar_chart.py  bubble_chart.py  chartspace.py  data_source.py  descriptors.py  error_bar.py  label.py  layout.py  legend.py  line_chart.py  marker.py  picture.py  pie_chart.py  pivot.py  plotarea.py  print_settings.py  radar_chart.py  reader.py  reference.py  scatter_chart.py  series.py  series_factory.py  shapes.py  stock_chart.py  surface_chart.py  text.py  title.py  trendline.py  updown_bars.py
fastpyxl/chartsheet/: __init__.py  chartsheet.py  custom.py  properties.py  protection.py  publish.py  relation.py  views.py
fastpyxl/comments/: __init__.py  author.py  comment_sheet.py  comments.py  shape_writer.py
fastpyxl/compat/: __init__.py  abc.py  numbers.py  product.py  singleton.py  strings.py
fastpyxl/descriptors/: __init__.py  base.py  container.py  excel.py  namespace.py  nested.py  sequence.py  serialisable.py  slots.py
fastpyxl/drawing/: __init__.py  colors.py  connector.py  drawing.py  effect.py  fill.py  geometry.py  graphic.py  image.py  line.py  picture.py  properties.py  relation.py  spreadsheet_drawing.py  text.py  xdr.py
fastpyxl/formatting/: __init__.py  formatting.py  rule.py
fastpyxl/formula/: __init__.py  excel_tokenizer_parser.txt  tokenizer.py  translate.py
fastpyxl/packaging/: core.py  custom.py  extended.py  interface.py  manifest.py  relationship.py  workbook.py
fastpyxl/pivot/: cache.py  fields.py  record.py  table.py
fastpyxl/reader/: drawings.py  excel.py  strings.py  workbook.py
fastpyxl/styles/: __init__.py  alignment.py  borders.py  builtins.py  cell_style.py  colors.py  differential.py  fills.py  fonts.py  named_styles.py  numbers.py  protection.py  proxy.py  styleable.py  stylesheet.py  table.py
fastpyxl/tests/: __init__.py  conftest.py  helper.py  notes_on_namespaces.rst  test_backend.py  test_iter.py  test_read.py  test_read_write_custom_doc_props.py  test_vba.py
fastpyxl/typed_serialisable/: __init__.py  base.py  compat.py  container.py  errors.py  excel.py  field_info.py  (+4 more)
scripts/: bench_realworld.py  benchmark.py  collect_phase0_inventory.py  convert_rst_guides.py  profile_construct_synthetic.py  profile_realworld.py  run_phase0_baseline_benchmarks.py  run_phase1_synthetic_benchmarks.py
user_guide/: 01-tutorial.qmd  02-usage.qmd  10-styles.qmd  11-rich_text.qmd  12-formatting.qmd  20-editing_worksheets.qmd  21-worksheet_properties.qmd  22-validation.qmd  23-worksheet_tables.qmd  24-filters.qmd  25-print_settings.qmd  26-pivot.qmd  27-comments.qmd  28-datetime.qmd  29-simple_formulae.qmd  30-defined_names.qmd  31-workbook_custom_doc_props.qmd  32-protection.qmd  40-introduction.qmd  41-anchors.qmd  42-area.qmd  43-bar.qmd  44-bubble.qmd  45-chart_layout.qmd  46-chartsheet.qmd  47-doughnut.qmd  48-gauge.qmd  49-graphical.qmd  50-line.qmd  51-limits_and_scaling.qmd  52-pattern.qmd  53-pie.qmd  54-radar.qmd  55-scatter.qmd  56-secondary.qmd  57-stock.qmd  58-surface.qmd  60-images.qmd  70-pandas.qmd  80-optimized.qmd  (+4 more)
(+1662 files in other folders)
