[project]
name = "fastpyxl"
version = "3.1.5"
description = "A high-performance Python library to read/write Excel 2010 xlsx/xlsm files"
readme = "README.rst"
license = "MIT"
license-files = ["LICENCE.rst"]
requires-python = ">=3.8"
authors = [
    { name = "See AUTHORS", email = "charlie.clark@clark-consulting.eu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "et_xmlfile",
]

[project.urls]
Documentation = "https://fastpyxl.readthedocs.io/en/stable/"
Source = "https://foss.heptapod.net/fastpyxl/fastpyxl"
Tracker = "https://foss.heptapod.net/fastpyxl/fastpyxl/-/issues"

[dependency-groups]
dev = [
    "pytest",
    "lxml",
    "pillow",
    "pandas",
    "ruff>=0.15.7",
    "ty>=0.0.24",
    "pytest-cov>=5.0.0",
]
docs = [
    "lxml",
    "sphinx",
    "pandas",
    "sphinx_rtd_theme",
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastpyxl*"]
exclude = ["*.tests", "scratchpad*"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501", "E101"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]
"**/tests/*" = ["F811"]
"doc/*" = ["F401"]

[tool.ty.rules]
# The codebase uses a custom descriptor system (Typed, Set, NoneSet, etc.)
# that implements __set__/__get__ for runtime type coercion. ty sees the
# descriptor type rather than the coerced value type, causing false positives.
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
not-iterable = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
call-non-callable = "ignore"
no-matching-overload = "ignore"
index-out-of-bounds = "ignore"
# Optional deps (lxml, defusedxml) and legacy pytest (py.path) lack type stubs
unresolved-import = "ignore"
# Intentional LSP violations: subclasses narrow to_tree() signatures
invalid-method-override = "ignore"
# Python 2 compat code wrapped in try/except
unresolved-reference = "ignore"

[tool.ty.environment]
# Optional dependencies that may not be installed
extra-paths = []

[tool.ty.src]
exclude = ["doc/"]

[tool.pytest.ini_options]
addopts = "--strict-markers --showlocals"
norecursedirs = ["lib", "include", "fastpyxl/Issues", ".tox", "local"]
python_files = ["test_*.py"]
markers = [
    "pil_required: PIL required to run test",
    "pil_not_installed: Run test only if PIL is not installed",
    "not_py33: Do not run test on Python 3",
    "lxml_required: lxml required to run test",
    "defusedxml_required: lxml required to run test",
    "lxml_buffering: lxml >= 3.4.0 required",
    "no_lxml: do not use lxml",
    "pandas_required: Pandas required for the test",
    "numpy_required: Numpy required for the test",
    "no_pypy: do not run on pypy",
]
filterwarnings = [
    "error",
    "ignore::FutureWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
